# RenaceCHESS

./: .cursorrules  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  RELEASE_NOTES_v1.md  VISION.md  benchmark_report.json  importlinter_contracts.ini  pr_body.txt  pr_body_m26.txt  pr_body_m28.txt  pr_body_m31.txt  pr_body_m32.txt  pr_body_m33.txt  pyproject.toml  renacechess.md  requirements.txt
.github/workflows/: ci.yml  credential-scan-full-history.yml
artifacts/m31_training_run/: config_lock.json  env.json  pip_freeze.txt  training_run_report.json
artifacts/m32_post_train_eval/: post_train_eval_report.json
configs/personalities/: neutral_baseline.v1.yaml  pawn_clamp.v1.yaml
contracts/: CONTRACT_REGISTRY_v1.json
data/frozen_eval_v2/: manifest.json  provenance.json  shard_000.jsonl  shard_001.jsonl  shard_002.jsonl  shard_003.jsonl  shard_004.jsonl  shard_005.jsonl  shard_006.jsonl  shard_007.jsonl  shard_008.jsonl  shard_009.jsonl
docs/: ANCHOR.md  ASSUMED_GUARANTEES.md  DATASETS.md  DOCS_INDEX.md  EVALUATION.md  GETTING_STARTED.md  GOVERNANCE.md  INGESTION.md  POC_RELEASE_MANIFEST.md  phaseEmap.md  postpocanchor.md  postpocphasemap.md  whatthebenchmarksprove.md
docs/adr/: ADR-COACHING-001.md
docs/audit/: DeferredIssuesRegistry.md
docs/contracts/: ADVICE_FACTS_CONTRACT_v1.md  CLI_CONTRACT.md  COACHING_TRANSLATION_PROMPT_v1.md  CONTRACT_INPUT_SEMANTICS.md  ELO_BUCKET_DELTA_FACTS_CONTRACT_v1.md  PERSONALITY_SAFETY_CONTRACT_v1.md  StructuralCognitionContract_v1.md
docs/evaluation/: M06_CONDITIONING.md  M06_FROZEN_EVAL.md  M07_HDI.md  (+1 more)
proof_pack_v1/: README.md  proof_pack_manifest.json
scripts/: benchmark_training.py  check_public_release_boundary.py  setup_dev.py
tests/: test_cli.py  test_cli_dataset_build.py  test_cli_eval_coverage.py  test_cli_ingest.py  test_cli_ingest_coverage.py  test_cli_ingest_errors.py  test_contracts_schema.py  test_dataset_build_golden.py  test_dataset_build_v2_golden.py  test_dataset_builder_edge_cases.py  test_dataset_builder_edge_cases_m03.py  test_dataset_receipt_build.py  test_dataset_schema_validation.py  test_dataset_split.py  test_demo_payload_golden.py  test_demo_pgn_overlay.py  test_determinism.py  test_eval_baselines.py  test_eval_integration.py  test_eval_metrics.py  test_eval_report_schema.py  test_frozen_eval_compat.py  test_ingest_cache.py  test_ingest_cache_error.py  test_ingest_coverage.py  test_ingest_decompress.py  test_ingest_decompress_coverage.py  test_ingest_decompress_errors.py  test_ingest_decompress_full.py  test_ingest_fetch.py  test_ingest_fetch_coverage.py  test_ingest_filename_fallback.py  test_ingest_final_coverage.py  test_ingest_golden.py  test_ingest_integration.py  test_ingest_lichess.py  test_ingest_orchestration.py  test_ingest_receipt_management.py  test_ingest_receipt_schema.py  test_livem01_skill_conditioning.py  (+53 more)
(+416 files in other folders)
