[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "renacechess"
version = "0.1.0"
description = "RenaceCHESS — Cognitive Human Evaluation & Skill Simulation"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [
    {name = "RenaceCHESS Contributors"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "python-chess~=1.999",
    "pydantic~=2.10.0",
    "jsonschema~=4.20.0",
    "requests>=2.32.4",
    "torch~=2.2.0",
    "zstandard~=0.22",
]

[project.optional-dependencies]
dev = [
    "ruff~=0.9.0",
    "mypy~=1.14.0",
    "pytest~=8.0.0",
    "pytest-cov~=6.0.0",
    "pytest-benchmark~=4.0.0",
    "coverage~=7.6.0",
    "import-linter~=2.1",
    "pip-audit~=2.7.0",
    "bandit~=1.7.0",
]

[project.scripts]
renacechess = "renacechess.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"
fix = true

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
extend-select = ["I"]

[tool.ruff.format]
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_unused_ignores = true
no_implicit_optional = true
strict_equality = true
warn_return_any = true
warn_unreachable = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "chess.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--cov=src/renacechess",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-report=html",
    "--cov-fail-under=90",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "golden: Golden file regression tests",
    "slow: Slow-running tests (training, large datasets)",
    "benchmark: Performance benchmark tests (M23)",
]

[tool.coverage.run]
source = ["src/renacechess"]
branch = true
omit = [
    "*/tests/*",
    "*/__init__.py",
    # Protocol-only interface modules have no executable code
    "*/personality/interfaces.py",
]

[tool.coverage.report]
fail_under = 90
precision = 2
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

